kubernetes/apps/default/tandoor/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tandoor
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tandoor
      app.kubernetes.io/instance: tandoor
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: selfhosted
            app.kubernetes.io/name: glance
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEntities:
        - world
        - cluster
